Update to components styles

--- a/components/HelpTooltip/HelpTooltip.pcss
+++ b/components/HelpTooltip/HelpTooltip.pcss
@@ -5,7 +5,7 @@
 }
 
 .tooltip {
-  composes: z-high from "../../../common/styles/layout.pcss";
+  composes: z-high from "../../styles/layout.pcss";
 }
 
 .tooltip-container {
